# rtmp_live_demo

./: README.md
FFmpegPlayer/app/: build.gradle
FFmpegPlayer/app/src/main/: AndroidManifest.xml
FFmpegPlayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpegPlayer/app/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  bsf.h  codec.h  jni.h  mediacodec.h  qsv.h  vdpau.h  videotoolbox.h  vorbis_parser.h
FFmpegPlayer/app/src/main/cpp/include/libavdevice/: avdevice.h
FFmpegPlayer/app/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  (+1 more)
FFmpegPlayer/app/src/main/res/layout/: activity_main.xml
FFmpegPlayer/gradle/wrapper/: gradle-wrapper.properties
MediaCodecPush/: settings.gradle
MediaCodecPush/app/: build.gradle
MediaCodecPush/app/src/main/: AndroidManifest.xml
MediaCodecPush/app/src/main/cpp/: native-lib.cpp
MediaCodecPush/app/src/main/res/layout/: activity_main.xml
MediaCodecPush/app/src/main/res/values/: strings.xml  themes.xml
MediaCodecPush/app/src/main/res/values-night/: themes.xml
MediaCodecPush/gradle/wrapper/: gradle-wrapper.properties
OpenCv/: settings.gradle
OpenCv/app/: build.gradle
OpenCv/app/src/main/: AndroidManifest.xml
OpenCv/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
OpenCv/app/src/main/res/layout/: activity_main.xml
OpenCv/app/src/main/res/values/: themes.xml
OpenCv/app/src/main/res/values-night/: themes.xml
OpenCv/gradle/wrapper/: gradle-wrapper.properties
OpenglDemo/: Opengl使用.md  settings.gradle
OpenglDemo/app/: build.gradle
OpenglDemo/app/src/main/: AndroidManifest.xml
OpenglDemo/app/src/main/res/drawable/: record_button_background.xml
OpenglDemo/app/src/main/res/layout/: activity_fbi.xml  activity_fbo.xml  activity_filter.xml  activity_main.xml  activity_simple_opengl.xml
OpenglDemo/app/src/main/res/raw/: beauty_frag.frag  camera_frag_cool.frag  camera_frag_grey.frag  camera_frag_warmth.frag  camera_vert.vert
OpenglDemo/app/src/main/res/values/: colors.xml
OpenglDemo/gradle/wrapper/: gradle-wrapper.properties
X264/: README.md  settings.gradle
X264/app/: build.gradle
X264/app/src/main/: AndroidManifest.xml
X264/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
X264/app/src/main/res/layout/: activity_camera2.xml  activity_camerax.xml
X264/app/src/main/res/values/: strings.xml  themes.xml
X264/app/src/main/res/values-night/: themes.xml
X264/gradle/wrapper/: gradle-wrapper.properties
mediacodec/: settings.gradle
mediacodec/app/: build.gradle
mediacodec/app/src/main/: AndroidManifest.xml
mediacodec/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mediacodec/app/src/main/res/layout/: activity_main.xml
mediacodec/app/src/main/res/values/: themes.xml
mediacodec/app/src/main/res/values-night/: themes.xml
mediacodec/gradle/wrapper/: gradle-wrapper.properties
(+100 files in other folders)
